<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="edu.sdsmt.singh_a.riskvariant.MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.17"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/player1_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.10"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/player1"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/player1_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="-10dp"
        android:layout_weight="0.115"
        android:fontFamily="monospace"
        android:gravity="center"
        android:inputType="text"
        android:labelFor="@id/player1_name"
        android:maxLength="20"
        android:maxLines="1"
        android:text="@string/player1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/player2_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.10"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/player2"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/player2_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="-10dp"
        android:layout_weight="0.115"
        android:fontFamily="monospace"
        android:gravity="center"
        android:inputType="text"
        android:labelFor="@id/player2_name"
        android:maxLength="20"
        android:maxLines="1"
        android:text="@string/player2"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/rounds_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.10"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/rounds"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/rounds_num"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="-10dp"
        android:layout_weight="0.115"
        android:fontFamily="monospace"
        android:gravity="center"
        android:inputType="number"
        android:labelFor="@id/rounds_num"
        android:maxLength="7"
        android:maxLines="1"
        android:text="@string/rounds"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_weight="0.15"
        android:gravity="center"
        android:onClick="onStartGame"
        android:text="@string/start"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>
